# tauri-plugin-wallpaper

./: .gitignore  Cargo.toml  build.rs  eslint.config.js  package-lock.json  package.json  readme.md  rosepack.ts  tsconfig.json  tsup.config.ts
.github/: funding.yml
example/: main.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wallpaper.html
example/src/: main.css  main.tsx  wallpaper.css  wallpaper.tsx
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs
examples/basic/: .gitignore  package.json  readme.md  roserepo.ts
examples/basic/source/: .gitignore  Cargo.toml  tauri.conf.json
examples/basic/source/src/: main.rs
examples/basic/source/src/commands/: common.rs
lib/: index.ts  main.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: attach.toml  detach.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
src/platform/windows/: attacher.rs  detacher.rs  mod.rs  reseter.rs
