[package]
name = "tauri-boilerplate"
version = "1.0.0"
description = "tauri boilerplate"
authors = ["meslzy"]
edition = "2021"
rust-version = "1.68.1"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }

tauri-plugin-wallpaper = { path = "../../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
